--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ a:hover {
 .style-logo {
 	margin-right: auto;
 	display:block;
-	max-width: 64px;
+	max-width: 96px;
 	height: auto;
 	margin-left: 32px;
 	margin-top: 32px;
@@ -27,7 +27,7 @@ a:hover {
 }
 
 .style-portrait{
-	max-width: 200px;
+	max-width: 320px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -43,7 +43,8 @@ a:hover {
 	text-align: center;
 	padding:26px;
 	max-width: 480px;
-	align-content: center
+	align-content: center;
+	font-size: 24px;
 }
 
 .style-nav ul {
@@ -56,8 +57,8 @@ a:hover {
 
 .style-nav li img {
 	display: inline-block;
-	width: 32px;
-	margin: auto;
+	width: 48px;
+	margin: 10px;
 	fill: red;
 }
 /*.row:before, .row:after {
@@ -129,6 +130,44 @@ a:hover {
 }
 /*Large View*/
 @media screen and (min-width: 480px) and (orientation: landscape){
+	
+	.style-logo {
+	margin-right: auto;
+	display:block;
+	max-width: 64px;
+	height: auto;
+	margin-left: 32px;
+	margin-top: 32px;
+	margin-bottom: 64px;
+}
+	
+	.style-portrait{
+	max-width: 200px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 50%;
+	padding: 0px;
+	
+}
+
+.style-description {
+	display: block;
+	/*border: 5px solid green;*/
+	margin: auto;
+	text-align: center;
+	padding:26px;
+	max-width: 480px;
+	align-content: center;
+	font-size: 16px;
+}
+
+	.style-nav li img {
+	display: inline-block;
+	width: 32px;
+	margin: 6px;
+	fill: red;
+}
 	
 .gallery {
 	display: grid;
