--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,21 @@ h1 {
 	font-size:30px;
 	text-transform: uppercase;
 }
+.youtube {
+display:block;
+position: relative;
+width: 640px;
+height:360px;
+margin-left: auto;
+margin-right: auto;
+text-align: center;
+}
+.youtube iframe {
+	width:100%;
+	height:100%;
+	padding:12px;
+	border: 0;
+}
 .portfolio-1 {
 	display:block;
 	background: #FFFFFF;
